--- a/Destry.Http/Destry.Http.csproj
+++ b/Destry.Http/Destry.Http.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DocumentationFile>bin\Release\net8.0\Destry.Http.xml</DocumentationFile>
+    </PropertyGroup>
+
 </Project>
